<resources>
    <string name="app_name">DSU Next</string>
    <string name="clear_selected_file">Clear selected file</string>
    <string name="return_label">Return</string>
    <string name="install_fab_description">Install the selected file</string>
    <string name="user_agreement">User Agreement</string>
    <string name="user_agreement_description">Risks, responsibility and terms of use</string>
    <string name="agreement_callout_title">Use at your own risk</string>
    <string name="agreement_callout_body">DSU Next is a tool for developers and advanced users. It changes how your device boots and how its storage is allocated. By continuing you accept every risk described on this page.</string>
    <string name="agreement_who_title">Who this is for</string>
    <string name="agreement_who_body">DSU Next is made for developers and advanced users who understand dynamic system updates, GSI images and Android storage. If you are not comfortable recovering a device on your own, do not use this tool.</string>
    <string name="agreement_risks_title">Risks</string>
    <string name="agreement_risks_body">Installing a dynamic system can lead to data loss, failed or looping boots, unexpected reboots, degraded performance, exhausted storage and, in the worst case, a device that no longer starts. Some of these problems only show up after the installation has finished. Images from unofficial or untrusted sources can be incompatible with your device or behave in ways nobody can predict.</string>
    <string name="agreement_preparation_title">Before you continue</string>
    <string name="agreement_preparation_body">You MUST have an unlocked bootloader. Installing images with a locked bootloader may be dangerous on some devices.\nYou MUST have a way to restore your device to its stock firmware.\nA full backup of your data is RECOMMENDED.\nMake sure the image matches your device and Android version.</string>
    <string name="agreement_responsibility_title">Your responsibility</string>
    <string name="agreement_responsibility_body">You alone are responsible for what you do with this tool: the images you choose, the options you enable and the permissions you grant. Any damage caused by negligence, carelessness or ignoring the warnings shown in the app is entirely your responsibility.</string>
    <string name="agreement_asis_title">Provided as is</string>
    <string name="agreement_asis_body">DSU Next is provided \"as is\" and \"as available\", without warranty of any kind, express or implied. That includes any warranty of fitness for a particular purpose, reliability, or that it will work on your device. Features may change or stop working at any time.</string>
    <string name="agreement_liability_title">No liability</string>
    <string name="agreement_liability_body">To the maximum extent permitted by law, the developer is not liable for any damage, data loss, device malfunction, loss of warranty or any other harm that results from your negligence or from using this tool, even if the developer was told such harm was possible.</string>
    <string name="agreement_third_party_title">Third-party software and images</string>
    <string name="agreement_third_party_body">DSU Next is based in part on DSU Sideloader and uses open source libraries under their own licenses. The developer does not provide, verify or endorse any system image you install and is not responsible for it.</string>
    <string name="agreement_accept_title">Accepting</string>
    <string name="agreement_accept_body">Tapping \"I agree\" confirms that you have read, understood and accepted this page. If you do not agree, close the app and do not use it.</string>
    <string name="agreement_scroll_hint">Scroll to the end to continue</string>
    <string name="agree">I agree</string>
    <string name="decline">Decline</string>
    <string name="about">About</string>
    <string name="about_description">Credits, agreement and more…</string>
    <string name="app_icon_description">DSU Next icon</string>
    <string name="application">Application</string>
    <string name="developer_github">Developer on GitHub</string>
    <string name="developer_github_description">Ditzzy (OhMyDitzzy)</string>
    <string name="credits">Credits</string>
    <string name="credit_base_project">DSU Sideloader</string>
    <string name="credit_base_project_description">The project DSU Next is derived from, by VegaBobo and contributors</string>
    <string name="crash_title">App crashed</string>
    <string name="crash_description">DSU Next ran into an unexpected problem and had to stop. Copy the log below and include it when you report the issue.</string>
    <string name="crash_log_label">Crash log</string>
    <string name="crash_no_log">No crash log was provided.</string>
    <string name="copy_log">Copy log</string>
    <string name="restart">Restart</string>
    <string name="copy_command_description">Copy command</string>
    <string name="unsupported">Unsupported</string>
    <string name="device_unsupported_description">Your device does not support dynamic partitions (DSU requires dynamic partitions).</string>
    <string name="setup_storage">Setup storage</string>
    <string name="setup_storage_description">You need to select a folder to be used as application storage (required to store temporary files).\n\nPlease select or create a new folder and allow access to it.</string>
    <string name="setup">Setup</string>
    <string name="storage_warning">Storage warning</string>
    <string name="storage_warning_description">You have less than %1$s%% of free storage, installation process will fail, please free up some space.</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="missing_permission">Missing permission</string>
    <string name="missing_permission_description">DSU Next requires READ_LOGS permission (which allows logcat reading).\nThis permission is used to obtain installation progress and diagnose errors in DSU installation.\n\n** Granting this permission may require an application restart.</string>
    <string name="granting_permission">Granting permission, DSU Next will restart in a moment…</string>
    <string name="grant_permission_failed">Couldn\'t grant READ_LOGS automatically. Try again, or run over adb:\npm grant %1$s android.permission.READ_LOGS</string>
    <string name="select_gsi_info">Select a file to be installed</string>
    <string name="dsu_already_installed">A DSU installation is already present.</string>
    <string name="selected_file">Selected file</string>
    <string name="file_unsupported">Unsupported file</string>
    <string name="select_file">Select file</string>
    <string name="clear">Clear</string>
    <string name="install">Install</string>
    <string name="proceed_installation">Proceed installation?</string>
    <string name="proceed_installation_description">Installation will be made using the parameters shown below:</string>
    <string name="discard_dsu_question">Discard installation?</string>
    <string name="dsu_already_installed_warning">All data present in installed DSU will be DELETED after discarding, are you sure?</string>
    <string name="decompressing_gz">Extracting gz file…</string>
    <string name="decompressing_xz">Extracting xz file…</string>
    <string name="compressing_to_gz">Preparing image file…</string>
    <string name="extracting_file">Extracting file…</string>
    <string name="copying_file">Copying file…</string>
    <string name="processing">Processing…</string>
    <string name="installation_prompt">Installation prompt invoked, waiting user confirmation to proceed..</string>
    <string name="creating_partition">Creating %1$s partition</string>
    <string name="installing_partition">Processing %1$s partition…</string>
    <string name="installing">Installing…</string>
    <string name="require_adb_cmd_to_continue">Preparation done, a command is required to proceed with installation.</string>
    <string name="see_commands">See commands</string>
    <string name="already_running_dsu">Installing a DSU when running an installed DSU is not supported, please reboot your device to default OS.</string>
    <string name="discard_dsu_otg">A DSU installation is already present, discard to continue?\n\n**All data stored in DSU installation will be deleted.</string>
    <string name="discarding">Discarding…</string>
    <string name="discard_dsu">Discard DSU</string>
    <string name="allocation_error">Allocation error</string>
    <string name="allocation_error_description">Allocation on sdcard isn\'t working, there are some fixes you can try:\n - Use a module that ships sepolicy fixes for gsid.\n - Unmount sdcard (you can set this option permanently in settings).</string>
    <string name="allocation_error_action">Unmount SD and retry</string>
    <string name="storage_error">Storage error</string>
    <string name="storage_error_description">Android requires at least %1$s%% of free storage to proceed installation, free up some space and try again.</string>
    <string name="fs_features_error">FS features unavailable</string>
    <string name="fs_features_error_description">Your kernel is likely to be registering f2fs in a different path than the one expected by the GSI daemon, there are some fixes you can try:\n - Use a module that ships a gsid binary which handles f2fs_dev.\n - Changing kernel.</string>
    <string name="selinux_error">SELinux error</string>
    <string name="selinux_error_description">Looks like SELinux denials are preventing DSU installation, there are some fixes you can try:\n - Use a module that ships sepolicy fixes for gsid.\n - If you\'re using a sdcard, try to unmount it (there is an option for that in settings section).\n - Change your SELinux to permissive (not recommended, weakens your device security).</string>
    <string name="selinux_error_action">Retry with permissive</string>
    <string name="extents_error_title">Extents error</string>
    <string name="extents_error_description">On Android 10 devices, images/filesystem needs to have more than 512 extents, there are some fixes you can try:\n - Use a module that ships a patched gsid binary.</string>
    <string name="failed_create_partition">Failed to create %1$s partition.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="error">Error</string>
    <string name="try_again">Try again</string>
    <string name="view_logs">View logs</string>
    <string name="installation_canceled">Installation canceled.</string>
    <string name="cancel_installation_question">Cancel installation?</string>
    <string name="cancel_installation_description">All progress made will be lost, are you sure?</string>
    <string name="installation_finished_rootless">Image installed successfully, check your notifications to boot into dynamic system.</string>
    <string name="settings">Settings</string>
    <string name="installation">Installation</string>
    <string name="developer_options">Developer options</string>
    <string name="other">Other</string>
    <string name="navigate_up">Navigate up</string>
    <string name="edit_gsi">Edit your GSI</string>
    <string name="gsi_try_again">Try again</string>
    <string name="gsi_workspaces">Workspaces</string>
    <string name="gsi_import">Import</string>
    <string name="gsi_import_fab_description">Import a GSI image</string>
    <string name="gsi_repack_size">Image size</string>
    <string name="gsi_size_original">Original size</string>
    <string name="gsi_size_auto">Smallest that fits</string>
    <string name="gsi_size_custom">Custom</string>
    <string name="gsi_size_custom_hint">Size, for example 3G or 3500M</string>
    <string name="gsi_output_name">Image name</string>
    <string name="gsi_repack_erofs_note">EROFS images are always built as small as possible, so the size option does not apply.</string>
</resources>